--- a/AIVedioMake.html
+++ b/AIVedioMake.html
@@ -157,6 +157,7 @@
                         <li><span class="task-label">詳細內容</span>：
                             <ol class="list-decimal list-inside ml-4 mt-2 space-y-1">
                                 <li>初步構思故事大綱，確認故事弧線與情感走向。</li>
+                                <li>故事人物設定。</li>
                                 <li>使用<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a>等AI工具，根據Prompt範例撰寫腳本。</li>
                                 <li>加強感動元素，確保情感表達。</li>
                             </ol>
