--- a/AIVedioMake.html
+++ b/AIVedioMake.html
@@ -158,11 +158,11 @@
                             <ol class="list-decimal list-inside ml-4 mt-2 space-y-1">
                                 <li>初步構思故事大綱，確認故事弧線與情感走向。</li>
                                 <li>故事人物設定。</li>
-                                <li>使用<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a>等AI工具，根據Prompt範例撰寫腳本。</li>
+                                <li>使用<a href="https://www.perplexity.ai/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Perplexity</a> 、<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> 、<a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a>等AI工具，根據Prompt範例撰寫腳本。</li>
                                 <li>加強感動元素，確保情感表達。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
+                        <li><span class="task-label">工具</span>：<a href="https://www.perplexity.ai/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Perplexity</a> <span class="mx-1 text-gray-400">|</span> <a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
                         <li><span class="task-label">備註</span>：釐清故事主軸。AI生成後務必親自審核與修改。</li>
                     </ul>
                 </div>
@@ -188,7 +188,7 @@
                                 <li>討論並修改，確保故事流暢與符合情境並加強感動元素。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
+                        <li><span class="task-label">工具</span>：<a href="https://www.perplexity.ai/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Perplexity</a> <span class="mx-1 text-gray-400">|</span><a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
                         <li><span class="task-label">備註</span>：注意各分鏡間的連貫性和關聯。</li>
                     </ul>
                 </div>
@@ -205,7 +205,7 @@
                                 <li>全體成員再次審查所有腳本內容，確認故事情節完整性、邏輯性與情感連貫性。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
+                        <li><span class="task-label">工具</span>：<a href="https://www.perplexity.ai/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Perplexity</a> <span class="mx-1 text-gray-400">|</span><a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a></li>
                         <li><span class="task-label">備註</span>：定稿各分鏡的台詞。</li>
                     </ul>
                 </div>
@@ -231,7 +231,7 @@
                                 <li>篩選最佳圖片，並進行必要的調整或修飾。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a> <span class="mx-1 text-gray-400">|</span> Raphael AI (請自行搜尋相關工具) <span class="mx-1 text-gray-400">|</span> Vheer (請自行搜尋相關工具)</li>
+                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a> <span class="mx-1 text-gray-400">|</span> <a href="https://raphaelai.org/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Raphael AI</a> <span class="mx-1 text-gray-400">|</span> <a href="https://vheer.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Vheer</a></li>
                         <li><span class="task-label">備註</span>：圖片風格力求一致，符合影片氛圍。</li>
                     </ul>
                 </div>
@@ -248,7 +248,7 @@
                                 <li>檢查動畫流暢度與效果。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://www.bing.com/images/create" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Bing</a> <span class="mx-1 text-gray-400">|</span> Vheer (請自行搜尋相關工具)</li>
+                        <li><span class="task-label">工具</span>：<a href="https://www.bing.com/images/create" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Bing</a> <span class="mx-1 text-gray-400">|</span> <a href="https://vheer.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Vheer</a></li>
                         <li><span class="task-label">備註</span>：確保每個動畫片段都能準確表達分鏡內容。</li>
                     </ul>
                 </div>
