--- a/physicsReview.html
+++ b/physicsReview.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
   <meta charset="utf-8">
-   <title>高中物理課程</title>
+   <title>高中物理學測複習</title>
    <meta name="description" content="提供物理與程式學習的教學與心得">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -138,7 +138,7 @@
       <h3 class="sub-title">學習資源</h3>
       <ul class="sub-menu">
          <li><a href="physics.html">物理學習</a></li>
-         <li><a href="program.html">程式語言</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1C2_FuqEmGk-B84c1rZVpLKzp0a8Guxmb?usp=sharing">課程檔案</a></li>
          <li><a href="exp.html">探究與實作</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
       
