--- a/AIVedioMake.html
+++ b/AIVedioMake.html
@@ -183,7 +183,7 @@
                     <ul class="text-gray-700 space-y-2">
                         <li><span class="task-label">詳細內容</span>：
                             <ol class="list-decimal list-inside ml-4 mt-2 space-y-1">
-                                <li>依腳本產生各分鏡 (參考流程說明的分鏡範本)。</li>
+                                <li>依腳本產生各分鏡及此分鏡的AI生圖英文提詞。</li>
                                 <li>小組成員討論並修改。</li>
                                 <li>討論並修改，確保故事流暢與符合情境並加強感動元素。</li>
                             </ol>
