--- a/AIVedioMake.html
+++ b/AIVedioMake.html
@@ -231,7 +231,7 @@
                                 <li>篩選最佳圖片，並進行必要的調整或修飾。</li>
                             </ol>
                         </li>
-                        <li><span class="task-label">工具</span>：<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a> <span class="mx-1 text-gray-400">|</span> <a href="https://raphaelai.org/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Raphael AI</a> <span class="mx-1 text-gray-400">|</span> <a href="https://vheer.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Vheer</a></li>
+                        <li><span class="task-label">工具</span>：gemini storybook、<a href="https://chat.openai.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">ChatGPT</a> <span class="mx-1 text-gray-400">|</span> <a href="https://gemini.google.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Gemini</a> <span class="mx-1 text-gray-400">|</span> <a href="https://raphaelai.org/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Raphael AI</a> <span class="mx-1 text-gray-400">|</span> <a href="https://vheer.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Vheer</a></li>
                         <li><span class="task-label">備註</span>：圖片風格力求一致，符合影片氛圍。</li>
                     </ul>
                 </div>
@@ -304,6 +304,9 @@
                         <li><span class="task-label">工具</span>：<a href="https://www.canva.com/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Canva</a> <span class="mx-1 text-gray-400">|</span> <a href="https://www.suno.ai/" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">Suno AI</a></li>
                         <li><span class="task-label">備註</span>：配合影片的音樂。</li>
                     </ul>
+
+                       <li><span class="task-label">操作參考影片</span>：<a href="https://drive.google.com/file/d/1Gr8eSLe8keZ_ouXLfYXBJIMaVKnh1ZOa/view?usp=sharing" target="_blank" class="text-blue-600 hover:underline font-medium rounded-md px-1 py-0.5 bg-blue-100">影片連結</a></li>
+                       
                 </div>
             </section>
 
