--- a/physics/grade10/lesson1.html
+++ b/physics/grade10/lesson1.html
@@ -511,9 +511,8 @@
                     <span class="font-bold text-gray-700">導出量的單位求法：</span>
                 </p>
                 <ol class="list-decimal list-inside text-lg mb-6 ml-4 space-y-2">
-                    <li><span class="font-bold">Step 1:</span> 找出該導出量與基本量之間的「數學關係式」。(Find the mathematical relationship between the derived quantity and base quantities.)</li>
-                    <li><span class="font-bold">Step 2:</span> 將關係式中的基本量替換成其對應的「基本單位」，然後進行運算。
-                        (Replace base quantities in the formula with their corresponding base units and calculate.)</li>
+                    <li><span class="font-bold">Step 1:</span> 找出和該物理量有關的公式。</li>
+                    <li><span class="font-bold">Step 2:</span> 將公式中的物理量換單位後進行運算。</li>
                 </ol>
                 <p class="text-lg leading-relaxed mb-6">
                     <span class="font-semibold text-red-600">舉例：</span> 速度 (Velocity) = 距離 (Distance) / 時間 (Time)。
