--- a/physics/grade10/lesson1.html
+++ b/physics/grade10/lesson1.html
@@ -743,8 +743,8 @@
                     <a href="https://reurl.cc/9nW14x" target="_blank" class="text-blue-600 hover:underline">物理史小測驗</a>
                 </p>
                 <div class="homework-question">
-                    <p class="text-lg mb-2">老師會要求你使用班級座號作為姓名 (例如: 10123 或 10301) 來完成作答。</p>
-                    <p class="text-lg mb-2">記得完成後記錄下最快完成時間和作答日期喔！</p>
+                    <p class="text-lg mb-2">姓名請使用班級座號 (例如: 10123 或 10301) 來完成作答。</p>
+                    <p class="text-lg mb-2">記得完成後於學習單記錄下最快完成時間和作答日期喔！</p>
                 </div>
 
                 <hr class="my-10 border-gray-300">
