--- a/physics.html
+++ b/physics.html
@@ -25,8 +25,9 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="https://guidephy.github.io/physics/grade10/lesson1.html">高一物理-CH1科學的態度與方法</a>
+                  <a href="https://tycedu.padlet.org/tyc1255/padlet-m3t3dsvt7fihlj4">高一物理-CH1科學的態度與方法</a>
                   <a href="https://guidephy.my.canva.site/">高二物理-CH5等速率圓周運動</a>
+                  <a href="https://guidephy.github.io/physicsReview.html">學測物理複習</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
@@ -587,6 +588,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
