--- a/physics.html
+++ b/physics.html
@@ -26,6 +26,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
                   <a href="https://tycedu.padlet.org/tyc1255/padlet-m3t3dsvt7fihlj4">高一物理-CH1科學的態度與方法</a>
+                  <a href="https://tycedu.padlet.org/tyc1255/padlet-ln5tn801rz03cadu">高一物理-CH2物質的組成與基本交互作用</a>
                   <a href="https://guidephy.my.canva.site/">高二物理-CH5等速率圓周運動</a>
                   <a href="https://guidephy.github.io/physicsReview.html">學測物理複習</a>
               </div>
@@ -588,6 +589,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
