--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
                   <a href="https://guidephy.github.io/AIVedioMake.html">AI影片製作</a>
+                  <a href="https://tycedu.padlet.org/tyc1255/webduino-ui5puvghi2sr4i7y">Webduino</a>
                
               </div>
           </li>
