--- a/exp.html
+++ b/exp.html
@@ -155,8 +155,7 @@
   </iframe>
 </div>
 <p>報告順序:<a href="https://tw.piliapp.com/random/wheel/" target="_blank">連結</a></p>
-<p><a href="https://forms.gle/5Nds1yvefuWN63Fr6">報告上傳</a></p>
-<p>201班報告:<a href="https://docs.google.com/spreadsheets/d/1XcxO1ijHuZvJ_nSmMRv_UhIY3EryJkhr6gs9LU3yvx0/edit?usp=sharing">連結</a></p>
+<p><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=sharing">實驗工作記錄表</a></p>
 <br><br>
 
 <br><br> 
@@ -533,3 +532,4 @@
   </footer>
 </body>
 </html>
+
