--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -30,6 +30,7 @@
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
+                  <a href="https://tycedu.padlet.org/tyc1255/padlet-szlkey1zp65yljaj">外送補充教材</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
