--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">探究與實作</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-         <li><a href="https://docs.google.com/presentation/d/e/2PACX-1vTaNmeyNLol6RK_NYd_O969byuYA7DyE8aR8H24R73n9H_8k14F6twzqDA03Mby-w/pub?start=false&loop=false&delayms=60000">世界咖啡館</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1--Flmiz7jCl6ppXhRVvRwmPSZ8sGZpov?usp=sharing">2026IEYI</a></li>
         
        
       </ul>
