--- a/exp.html
+++ b/exp.html
@@ -155,7 +155,9 @@
   </iframe>
 </div>
 <p>報告順序:<a href="https://tw.piliapp.com/random/wheel/" target="_blank">連結</a></p>
-<p><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=sharing">實驗工作記錄表</a></p>
+<p><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=sharing">實驗工作記錄表</a></p>    
+<p><a href="https://drive.google.com/file/d/1t6P8gD0O-xI_FjOMd5ifTBJJT6oditr7/view?usp=sharing">影片評分表</a></p>
+      
 <br><br>
 
 <br><br> 
@@ -532,4 +534,5 @@
   </footer>
 </body>
 </html>
+
 
