--- a/exp.html
+++ b/exp.html
@@ -155,8 +155,10 @@
   </iframe>
 </div>
 <p>報告順序:<a href="https://tw.piliapp.com/random/wheel/" target="_blank">連結</a></p>
-<p><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=sharing">實驗工作記錄表</a></p>    
+<p><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=sharing">實驗工作記錄表</a></p> 
+<p><a href="https://docs.google.com/spreadsheets/d/1xwig0ZvzEBh7lHtnBinkgM70FVygxLvRAUfqgOCeUUc/edit?usp=sharing">各組影片連結</a></p>     
 <p><a href="https://drive.google.com/file/d/1t6P8gD0O-xI_FjOMd5ifTBJJT6oditr7/view?usp=sharing">影片評分表</a></p>
+      
 
 <br><br> 
   
@@ -532,6 +534,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
