--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -31,6 +31,8 @@
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
                   <a href="https://tycedu.padlet.org/tyc1255/padlet-szlkey1zp65yljaj">外送補充教材</a>
+                  <a href="https://www.canva.com/design/DAG4cYujTyM/atpJGDmmU1XRYwRiKrzIew/view?utm_content=DAG4cYujTyM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h65b4e83e18">上課手機使用規定</a>
+                
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
