--- a/physics.html
+++ b/physics.html
@@ -575,6 +575,7 @@
          <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
          <li><a href="https://adl.edu.tw/HomePage/home/">因材網</a></li>
+         <li><a href="https://script.google.com/macros/s/AKfycbwV8O-sXRuCkDpDGaA7OMS-7e26o2-0cUeeGKvb-2Kp5SptNLYscQ3GU-HZykL31Enb/exec">學生抽籤系統</a></li>
         
       </ul>
 
@@ -604,6 +605,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
