--- a/physics.html
+++ b/physics.html
@@ -575,7 +575,7 @@
          <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
          <li><a href="https://adl.edu.tw/HomePage/home/">因材網</a></li>
-         <li><a href="https://script.google.com/macros/s/AKfycbzBBVF-zpjEjSOSB4m0eb-AoD3drdanYD2jdt5okjTInS4o3wuH6UqibmDTEUGz15ly/exec">學生抽籤系統</a></li>
+         <li><a href="https://script.google.com/macros/s/AKfycbwuXFdlp6Q4WGzfBzt5kxAKmzPH1iAuhh3a80GIgeZmnoP91qef_Q9AM7UtX18usBjv/exec">上課小幫手</a></li>
         
       </ul>
 
@@ -605,6 +605,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
